# farm

./: .pre-commit-config.yaml  farm-compose.yml  pyproject.toml  readme.md  view-md.py
.github/workflows/: main.yml
docs/: research-workflow.bpmn
docs/discussions/: 000-contracting.md  001-requirements-analysis.md  001-requirements-analysis.proc.md  002-ideas.md
src/farm/: __init__.py  camera.py  server.py  video_streaming.py
src/farm/PoCVideoProcessing/: VideoProcess.py
src/farm/agent/: orchestration.py  server.py
src/farm/core/: algo.py  artefacts.py  collections.py  productive.py  types.py
src/farm/core/models/: cv.py  scenario.py
src/farm/cv/: agent.py  transform.py
src/farm/server/: server.py
src/farm_cv/farm_cv/: .project  plugin.properties  plugin.xml
src/farm_cv/farm_cv.edit/: .project  plugin.properties  plugin.xml
src/farm_cv/farm_cv.edit/src-gen/farm_cv/provider/: AnalyzedAnimalItemProvider.java  CameraObjectItemProvider.java  Cv_ControllerItemProvider.java  Farm_cvEditPlugin.java  Farm_cvItemProviderAdapterFactory.java  FishItemProvider.java  GenericAquariumItemProvider.java  ImageProcessorItemProvider.java  OutputBuilderItemProvider.java
src/farm_cv/farm_cv.editor/: .project  plugin.properties  plugin.xml
src/farm_cv/farm_cv.editor/src-gen/farm_cv/presentation/: Farm_cvActionBarContributor.java  Farm_cvEditor.java  Farm_cvEditorPlugin.java  Farm_cvModelWizard.java
src/farm_cv/farm_cv/model/: farm_cv.aird  farm_cv.ecore  farm_cv.genmodel
src/farm_cv/farm_cv/src-gen/farm_cv/: AnalyzedAnimal.java  CameraObject.java  Cv_Controller.java  Farm_cvFactory.java  Farm_cvPackage.java  Fish.java  GenericAquarium.java  ImageProcessor.java  OutputBuilder.java
src/farm_cv/farm_cv/src-gen/farm_cv/impl/: AnalyzedAnimalImpl.java  CameraObjectImpl.java  Cv_ControllerImpl.java  Farm_cvFactoryImpl.java  Farm_cvPackageImpl.java  FishImpl.java  GenericAquariumImpl.java  ImageProcessorImpl.java  OutputBuilderImpl.java
src/farm_cv/farm_cv/src-gen/farm_cv/util/: Farm_cvAdapterFactory.java  Farm_cvSwitch.java
src/farm_tool/: video_streaming.py
src/farm_tool/core/models/: sensors.py
src/farm_web/: index.html  package-lock.json  package.json
src/farm_web/src/: App.jsx  App.scss  index.jsx
src/farm_web/src/Components/: AlgSettings.jsx  Layout.jsx  Sensors.jsx  SensorsList.jsx  Settings.jsx  Statistics.jsx
src/farm_web/src/shared/: FileInput.jsx  Input.jsx  InputRadio.jsx  NumberInput.jsx  RadioSelection.jsx  Select.jsx
src/proto/cv/: agent.proto
tests/MulticastQueue/: TestMulticastQueue.py
tests/Orchestration/: TestOrchestrationFeatures.py
tests/ZipLongestFunc/: TestZipLongestFunction.py
