[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "farm-dev"
version = "0.0.1"
description = "Framework for Activity Real-time Monitoring software"
authors = [
    { name = "Adrian Valentin Panaintescu", email = "adrian.cert@gmail.com" },
    { name = "Vlad Craciun", email = "craciun.vlad@yahoo.ie" },
    { name = "Dragoș Baciu", email = "baciu.dragos17@gmail.com" },
    { name = "Eduard Alexandru Baciu", email = "baciuedalex@gmail.com" },
    { name = "Claudiu Catalin Strimbei", email = "claudiu.strimbei@gmail.com" },
]
readme = "README.md"
license = { text = "GPL-3.0-or-later" }
requires-python = ">=3.8"
dependencies = [
    "attrs>=23.1.0",
    "aiohttp>=3.8.6",
    "aiortc>=1.5.0",
    "betterproto>=1.2.5",
    "grpclib>=0.4.6",
    "aiohttp-cors>=0.7.0",
]


[project.optional-dependencies]
dev = [
    "betterproto[compiler]>=1.2.5",
    "grpcio-tools>=1.59.3",
]
demo = [
    "flask>=3.0.0",
    "opencv-python>=4.8.1.78",
    "camera>=1.3.0",
]
agent = [
    "aiohttp>=3.9.1",
    "aiortc>=1.6.0",
    "PyYaml>=6.0.1",
    "msgspec>=0.18.5",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["farm"]

[tool.ruff]
extend-select = ["C", "N", "SIM", "PTH", "I", "PL", "F", "S", "A", "E", "G", "B", "W", "Q"]
